Help panel: Fix cog popup alignment
Set the popup alignment to 'backwards', so that it is aligned that way
on purpose rather than by accident. (It was trying to center itself,
then being pushed to the left to stay within the dialog boundaries.)

Update the margin adjustment accordingly, and add a few pixels so that
the border of the cog popup coincides with the border of the dialog.

Bug: T225669

--- a/modules/help/ext.growthExperiments.HelpPanelProcessDialog.less
+++ b/modules/help/ext.growthExperiments.HelpPanelProcessDialog.less
@@ -59,8 +59,9 @@
 	background-color: @background-color-base;
 	// Hack: remove 2px top gap
 	margin-top: -2px;
-	// Hack: remove 7px right gap
-	margin-left: 7px;
+	// Hack: align popup with dialog border
+	// Counteract 10px buffer from OOUI, plus 1px for the dialog border width
+	margin-right: -11px;
 
 	p a {
 		display: block;
